src/elements/snapshots/capitaine__elements__element_list__tests__empty_list.snap
---
source: src/elements/element_list.rs
expression: list
---
ElementList {
    children: [],
    _expl_state: PhantomData,
}
