src/elements/snapshots/capitaine__elements__element_list__tests__new_list-2.snap
---
source: src/elements/element_list.rs
expression: list_data
---
ElementListData {
    children: [
        (
            "aaa",
            LabelData(
                "aaa",
                PhantomData,
                PhantomData,
            ),
        ),
        (
            "bbb",
            LabelData(
                "bbb",
                PhantomData,
                PhantomData,
            ),
        ),
        (
            "ccc",
            LabelData(
                "ccc",
                PhantomData,
                PhantomData,
            ),
        ),
    ],
    _comp_state: PhantomData,
    _comp_event: PhantomData,
}
