src/elements/snapshots/capitaine__elements__element_list__tests__new_list.snap
---
source: src/elements/element_list.rs
expression: list
---
ElementList {
    children: [
        (
            "aaa",
            Label(
                "aaa",
                PhantomData,
                PhantomData,
            ),
        ),
        (
            "bbb",
            Label(
                "bbb",
                PhantomData,
                PhantomData,
            ),
        ),
        (
            "ccc",
            Label(
                "ccc",
                PhantomData,
                PhantomData,
            ),
        ),
    ],
    _comp_state: PhantomData,
    _comp_event: PhantomData,
}
